# sickle

./: .gitignore  config.example.toml  pyproject.toml
entries/: __init__.py
entries/IM/: __init__.py
entries/IM/telegram/: __init__.py  app.py  handlers.py  main.py  renderer.py
src/sickle/: __init__.py  __main__.py  config.py  errors.py  host.py  logs.py
src/sickle/agents/: __init__.py  base.py
src/sickle/agents/operator/: __init__.py  agent.py
src/sickle/agents/orchestrator/: agent.py
src/sickle/llm/: client.py
src/sickle/memory/: __init__.py  history.py
src/sickle/route/: __init__.py  context.py  dispatch.py  response.py  runner.py  trigger.py
src/sickle/tools/: __init__.py  checker.py  executor.py  route.py
src/sickle/tools/toolkit/: __init__.py  fs.py  process.py
