[project]
name = "sickle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nyxeki", email = "k7tqbwrgpc@privaterelay.appleid.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sickle = "sickle:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
