[project]
name = "sickle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nyxeki", email = "k7tqbwrgpc@privaterelay.appleid.com" }
]
requires-python = ">=3.14"
dependencies = [
    "litellm>=1.83.10",
    "python-telegram-bot>=22.7",
    "tenacity>=9.1.4",
]

[project.scripts]
sickle = "sickle:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
